add comment to actions for when i add a main workflow

--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -3,7 +3,8 @@ name: docker polynote branch build
 on:
   push:
     branches:
-      - '*'
+      - '**' # all branches ...
+#      - '!main' # TODO: exclude main
 
 jobs:
 
