--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -16,5 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag docker-polynote:$(date +%s)
+      env:
+        DOCKER_BUILDKIT: 1
     - name: Cleanup
       run: docker rmi docker-polynote:$(date +%s)
